devops/kubernetes/cloudwatch-agent.yaml
---
# CloudWatch Agent DaemonSet — ships all pod logs to CloudWatch
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
  labels:
    name: amazon-cloudwatch

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudwatch-agent
  namespace: amazon-cloudwatch
spec:
  selector:
    matchLabels:
      name: cloudwatch-agent
  template:
    metadata:
      labels:
        name: cloudwatch-agent
    spec:
      serviceAccountName: cloudwatch-agent
      terminationGracePeriodSeconds: 60
      containers:
        - name: cloudwatch-agent
          image: amazon/cloudwatch-agent:1.247358.0b252275
          resources:
            limits:   { cpu: 200m, memory: 200Mi }
            requests: { cpu: 200m, memory: 200Mi }
          volumeMounts:
            - name: cwagentconfig
              mountPath: /etc/cwagentconfig
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: dockersock
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: varlibdocker
              mountPath: /var/lib/docker
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: devdisk
              mountPath: /dev/disk
              readOnly: true
      volumes:
        - name: cwagentconfig
          configMap:
            name: cwagentconfig
        - name: rootfs
          hostPath: { path: / }
        - name: dockersock
          hostPath: { path: /var/run/docker.sock }
        - name: varlibdocker
          hostPath: { path: /var/lib/docker }
        - name: sys
          hostPath: { path: /sys }
        - name: devdisk
          hostPath: { path: /dev/disk }
